--- a/jennifer/about.html
+++ b/jennifer/about.html
@@ -76,7 +76,7 @@
             <div class="content-about">
                 <div class="image">
                 </div>
-                <b><p class="content-title">About Us</p></b>
+                <b><p class="content-fill" style="font-family: titleBold; font-size: 35px;">About Us</p></b>
                 <!-- <img src="https://cdn-prod.medicalnewstoday.com/content/images/hero/321/321593/321593_1100.jpg"> -->
                 <p class="content-fill">Our overall mental health is as important as our physical health. While we try to keep our bodies, outfit and custom shirts fit and healthy, it is also necessary to keep our minds fit and strong too. However, most of us have no idea on how to keep our mental health in tiptop shape, and how we could understand those who are experiencing mental health concerns.</p>
                 <p class="content-fill">Almost half of the young generation across the globe are experiencing mental health problems. Most of them are experiencing different forms of depression and anxiety caused by peer pressure, family concerns, and poor self-esteem. Also, those who are experiencing these resort to a lot of dangerous activities that could lead to serious complications. However, it is sad to know that others dismiss this concern as plain drama or just lazy to move on with their lives.</p>
