--- a/jennifer/home.html
+++ b/jennifer/home.html
@@ -70,7 +70,7 @@
                 </li>
                 <li> <a href="findhelp.html">Find Help</a></li>
                 <li class="icon">
-                    <a href="javascript:void(0);" onclick="myFunction()">☰ Menu</a>
+                    <a href="" onclick="myFunction()">☰ Menu</a>
                 </li>
             </ul>
             </div>
