--- a/jennifer/mental.html
+++ b/jennifer/mental.html
@@ -38,6 +38,10 @@
         .text-grid p {
             padding: 2vh !important;
         }
+        .grid-item #text-desc {
+	    opacity: 1;
+    }
+
     }
 
 </style>
