--- a/jennifer/mentaldisorderclick-3.html
+++ b/jennifer/mentaldisorderclick-3.html
@@ -28,6 +28,7 @@
     background-position: center;
     text-align: center;
     background-color: #ed9c9d;
+    padding-top: 10vh;
 }
 
 #grid-item a h2 {
@@ -49,8 +50,12 @@
 	opacity: 1;
 }
 .more-stories-click {
-    padding-left: 11vw;
+    padding: 0;
 }
+.button-stories {
+    padding:0;
+    font-family: titleBold;
+    }
 @media screen and (max-width: 480px) {
     .text-grid {
         padding-top:0 !important;
@@ -70,6 +75,9 @@
     }
     .grid-item {
         height:30vh;
+    }
+    .grid-item p {
+    opacity: 1;
     }
 }
 </style>
@@ -169,13 +177,13 @@
 </ul>
 <p>Once a person feels a sense of emotional well-being, they feel stronger and able to bounce back from stress. This helps them feel that they can cope better with difficult life events. Severe stress may be a symptom of an anxiety disorder.</p>
 <p>Seek professional help if the signs and symptoms of stress have been present for a long period of time; if your functioning at work, school, home or socially is affected; or if you experience increasing stress and emotional difficulties.Recovery from chronic stress is possible.</p>
-            </div>
+<div class="more-stories more-stories-click">
+    <button class="button-stories button-stories-click">
+        Other Disorders
+    </button>
+</div>
+           </div>
         </div>
-    </div>
-    <div class="more-stories more-stories-click">
-        <button class="button-stories button-stories-click">
-            Other Disorders
-        </button>
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/anxiety.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
@@ -195,7 +203,7 @@
         </div>
         <div class="text-grid mentalclick" id="grid-item" style="background-color:#2b45ba;">
             <a href="findtherapist.html"><h2>Find A Therapist</h2></a>
-            <a href="findtherapist.html"><button class="more-stories button-stories" style="margin:auto !important;">Connect</button></a>
+            <a href="findtherapist.html"><button class="more-stories button-stories" style="margin:auto !important; padding-left:30px; padding-top:15px; padding-bottom:15px; padding-right: 30px;">Connect</button></a>
         </div>
     </div>
     <div class="footer">
