--- a/jennifer/mentaldisorderclick-4.html
+++ b/jennifer/mentaldisorderclick-4.html
@@ -28,6 +28,7 @@
     background-position: center;
     text-align: center;
     background-color: #ed9c9d;
+    padding-top: 10vh;
 }
 #grid-item a h2 {
     color:white;
@@ -48,8 +49,12 @@
 	opacity: 1;
 }
 .more-stories-click {
-    padding-left:11vw;
+    padding: 0;
 }
+.button-stories {
+    padding:0;
+    font-family: titleBold;
+    }
 @media screen and (max-width: 480px) {
     .text-grid {
         padding-top:0 !important;
@@ -69,6 +74,9 @@
     }
     .grid-item {
         height:30vh;
+    }
+    .grid-item p {
+    opacity: 1;
     }
     
 }
@@ -171,13 +179,16 @@
     <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif;">REM Sleep Behavior Disorder (RBD)</li>
     <p>This is a type of sleep disorder where a person enacts their dreams while in REM sleep. RBD predominantly affects older adults, and the associated behaviors that are often violent in nature resulting in stress and anxiety.</p>
 </ul>
-<p>All these sleep disorders reflect the symptoms faced by people. However, most people often experience these symptoms and tend to ignore it or feel hesitate in sharing it, but let us tell you that your problems are not meant to be ignored. They deserve your attention where you hold responsibility and are ready to improve on your problems. For that online therapy can yield excellent results. Recent research has highlighted how online therapy is helping people improve their sleep patterns.</p>            </div>
+<p>All these sleep disorders reflect the symptoms faced by people. However, most people often experience these symptoms and tend to ignore it or feel hesitate in sharing it, but let us tell you that your problems are not meant to be ignored. They deserve your attention where you hold responsibility and are ready to improve on your problems. For that online therapy can yield excellent results. Recent research has highlighted how online therapy is helping people improve their sleep patterns.</p>
+<div class="more-stories more-stories-click">
+    <button class="button-stories button-stories-click">
+        Other Disorders
+    </button>
+</div>
+
+</div>
+
         </div>
-    </div>
-    <div class="more-stories more-stories-click">
-        <button class="button-stories button-stories-click">
-            Other Disorders
-        </button>
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/anxiety.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
@@ -197,7 +208,7 @@
         </div>
         <div class="text-grid mentalclick" id="grid-item" style="background-color:#2b45ba;">
             <a href="findtherapist.html"><h2>Find A Therapist</h2></a>
-            <a href="findtherapist.html"><button class="more-stories button-stories" style="margin:auto !important;">Connect</button></a>
+            <a href="findtherapist.html"><button class="more-stories button-stories" style="margin:auto !important; padding-left:30px; padding-top:15px; padding-bottom:15px; padding-right: 30px;">Connect</button></a>
         </div>
     </div>
     <div class="footer">
