--- a/jennifer/stories-click-2.html
+++ b/jennifer/stories-click-2.html
@@ -33,6 +33,19 @@
 .more-stories-click {
     padding-left: 11vw;
 }
+.more-stories-click {
+    padding: 0;
+}
+.button-stories {
+    padding:0;
+    font-family: titleBold;
+}
+
+@media screen and (max-width: 480px) {
+    .grid-item p {
+    opacity: 1;
+    }
+}
 </style>
 <body>
     <div class="header">
@@ -128,14 +141,13 @@ purpose but it’s not like, I don’t think it’s as important as something li
 <p>There are loads of people who inspire me. I don’t know. I love all my singer-songwriters, stuff like that, but when you say who inspires, I kind of instantly on autopilot go to music because we’re talking about music all the time. But I’m trying to think of maybe someone else that inspires me. I’ll
 come back in like a week and answer that. I don’t know. I’ve got like all the wettest answers it’s really bad. Me mam – we’re best mates (joking). I really want to say the wettest answer ever but no I’m not saying that, I can’t say that. What have I become, who am I. Let’s move on. That’s the last
 one. I will think about it. We’ll come back to that one.</p>
-
+<div class="more-stories more-stories-click">
+    <button class="button-stories button-stories-click">
+        Other Stories
+    </button>
+</div>
            </div>
         </div>
-    </div>
-    <div class="more-stories more-stories-click">
-        <button class="button-stories button-stories-click">
-            Other Stories
-        </button>
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
