--- a/jennifer/stories-click-4.html
+++ b/jennifer/stories-click-4.html
@@ -36,6 +36,18 @@
 .more-stories-click {
     padding-left: 11vw;
 }
+.more-stories-click {
+    padding: 0;
+}
+.button-stories {
+    padding:0;
+    font-family: titleBold;
+}
+@media screen and (max-width: 480px) {
+    .grid-item p {
+    opacity: 1;
+    }
+}
 </style>
 <body>
     <div class="header">
@@ -113,13 +125,13 @@
 <p>Having acceptance of my mental illness means taking charge of my life and moving forward. This has played a big part in my recovery. I started to have acceptance of my mental illness after giving myself credit for my strengths and weaknesses and accepting my limitations. Also, believing that I have something to offer in society and doing positive, healthy things in my life. Not giving up in life has been a positive thing for me. It has helped me to make a lot of progress in my life. In my journey as a Peer Support Specialist and being involved with NAMI has helped me with acceptance. Also, having family, friends, and being a student has very much helped me to accept my mental illness. Staying in treatment and taking my medications has also helped me with acceptance.</p>
 <p>It is very important for me to use coping skills that can help me get through a tough day. Having good coping skills for me, means I have a plan in managing my mental illness. There are several coping skills that I use. You can take a hot shower, listen to music, watch television, and keep a balance with your schedule during the week. Medication is also important to me and my treatment. Also, take plenty of breaks when you are doing your school assignments and do not procrastinate in getting your homework done. It’s a good idea to have a good support system to help manage your symptoms and people who can help you with moral support. Also, I make sure to get enough sleep and eat healthy, plus exercise. I want to make sure to keep a balance in my life and have activities to do during the week. It’s been beneficial for me to be attend my support group meetings at NAMI, which has been a big part of my support system. I like facilitating groups and making friends. Basically, pull something out of your toolbox to help you cope better. This helps you cope better when you are having a bad day.</p>
 <p>Knowing that hope is the “cornerstone of recovery,” and believing you can have success with your life is critical. Your successes and dreams take on many different directions to arrive at your destination. Success means to me means building upon my strengths and moving forward in my life. Hope means that you believe in yourself and feeling positive never accepting defeat.</p>
-            </div>
+<div class="more-stories more-stories-click">
+    <button class="button-stories button-stories-click">
+        Other Stories
+    </button>
+</div>
+</div>
         </div>
-    </div>
-    <div class="more-stories more-stories-click">
-        <button class="button-stories button-stories-click">
-            Other Stories
-        </button>
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
