--- a/jennifer/stories-click.html
+++ b/jennifer/stories-click.html
@@ -22,7 +22,16 @@
 	opacity: 1;
 }
 .more-stories-click {
-    padding-left: 11vw;
+    padding: 0;
+}
+.button-stories {
+    padding:0;
+    font-family: titleBold;
+}
+@media screen and (max-width: 480px) {
+    .grid-item p {
+    opacity: 1;
+    }
 }
 </style>
 <body>
@@ -104,13 +113,13 @@
 <p>Out of that was born our ‘World of Wellbeing’ concept. A holistic approach where in our resources section exercise, nutrition, employment and money support is provided alongside a map with all the free mental health services in your locality.</p>
 <p>By aligning action with awareness, we’re promoting a New Normal, where people can talk openly about their emotions, as comfortably as they’d talk about last night’s game or the latest TV series.</p>
 <p>In these fractured times, our expert writers and photographers are exploring stories around the thing that unites us all – mental health. Good or bad, we all have it.</p>
+<div class="more-stories more-stories-click">
+    <button class="button-stories button-stories-click">
+        Other Stories
+    </button>
+</div>
             </div>
         </div>
-    </div>
-    <div class="more-stories more-stories-click">
-        <button class="button-stories button-stories-click">
-            Other Stories
-        </button>
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
