--- a/jennifer/stories.html
+++ b/jennifer/stories.html
@@ -26,7 +26,12 @@
         padding: 0;
     }
     @media screen and (max-width: 480px) {
-       
+       .grid-item {
+           font-size: 25px;
+       }
+       .eyes {
+           padding:0 !important;
+       }
     }
 
 </style>
@@ -103,7 +108,7 @@
     </div>
     <div class="magazine-3-3" style="grid-template-columns: 1fr 1fr 1fr;">
         <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/FOTO2.jpeg'); background-size: cover;">
-            <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #0000A0; height: 30%;">&nbsp;Hope and Help</p></a>
+            <a href="stories-click-5.html"><p id="text-desc" style="width: 100%; background-color: #0000A0; height: 30%;">&nbsp;Hope and Help</p></a>
             
         </div>
         <div class="grid-immediate" id="grid-item2">
@@ -111,12 +116,12 @@
             <a href="findhelp.html"><p>Get Immediate Help</p></a>
         </div>
         <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-4-atas.jpg'); background-size: cover;">
-            <a href="stories-click-5.html"><p id="text-desc" style="width: 100%; background-color: yellow; height: 30%;">&nbsp;Cornerstone of recovery</p></a>
+            <a href="stories-click-4.html"><p id="text-desc" style="width: 100%; background-color: yellow; height: 30%;">&nbsp;Cornerstone of recovery</p></a>
         </div>
     </div>
     <div class="magazine-health" style="padding-top:0px;">
         <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-5-atas.jpg'); background-size: cover;">
-            <a href="stories-click-4.html"><p id="text-desc" class="text-desc-edit" style="width: 100%; background-color: #008000;">&nbsp;Students dont feel they are getting &nbsp;appropriate help online</p></a>
+            <a href="stories-click-3.html"><p id="text-desc" class="text-desc-edit" style="width: 100%; background-color: #008000;">&nbsp;Students dont feel they are getting &nbsp;appropriate help online</p></a>
         </div>
         <div class="grid-immediate" id="grid-item2" style="background-color:#7851A9;">
             <p style="font-size:40px;">Mental Health <br>Disorders</br></p>
