--- a/jennifer/stories-click-3.html
+++ b/jennifer/stories-click-3.html
@@ -12,7 +12,7 @@
 <style>
     .stories-image {
 	width: 100%;
-	background-image: url('images/FOTO2.jpeg');
+	background-image: url('images/stories-5-atas.jpg');
 	background-size: 100%;
 	height: 800px;
 	height: 45vw;
@@ -32,6 +32,18 @@
 }
 .more-stories-click {
     padding-left: 11vw;
+}
+.more-stories-click {
+    padding: 0;
+}
+.button-stories {
+    padding:0;
+    font-family: titleBold;
+}
+@media screen and (max-width: 480px) {
+    .grid-item p {
+    opacity: 1;
+    }
 }
 </style>
 <body>
@@ -113,14 +125,14 @@
 <p>that reasons why a student might not call for help include feeling embarrassed or nervous. But the help is there, and making the most of it can make a positive difference to your life. </p>
 <p>You shouldn't feel embarrassed about asking for help – the services are there to support you. Speak to your student union, who will be able to put you in touch with any university services. Your </p>
 <p>university may be able to help you if you're struggling to cope with your academic work – both academically but also in terms of counselling.</p>
-            </div>
+        <div class="more-stories more-stories-click">
+            <button class="button-stories button-stories-click">
+                Other Stories
+            </button>
         </div>
     </div>
-    <div class="more-stories more-stories-click">
-        <button class="button-stories button-stories-click">
-            Other Stories
-        </button>
-    </div>
+ </div>
+</div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
             <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">appropriate help online</p></a>
