--- a/jennifer/stories-click-5.html
+++ b/jennifer/stories-click-5.html
@@ -12,7 +12,7 @@
 <style>
 .stories-image {
 	width: 100%;
-	background-image: url('images/stories-5-atas.jpg');
+	background-image: url('images/FOTO2.jpeg');
 	background-size: 100%;
 	height: 800px;
 	height: 45vw;
@@ -32,6 +32,18 @@
 }
 .more-stories-click {
     padding-left: 11vw;
+}
+.more-stories-click {
+    padding: 0;
+}
+.button-stories {
+    padding:0;
+    font-family: titleBold;
+}
+@media screen and (max-width: 480px) {
+    .grid-item p {
+    opacity: 1;
+    }
 }
 </style>
 <body>
@@ -110,14 +122,14 @@
 <p>My negative thoughts are telling me not to submit this because “who cares about my struggles,” “others have it way worse,” but I’m continuing to type this anyway because I want others who are struggling to know you are not alone. I also want to say that yes, I have a mental illness, but that is not all of who I am. I am a daughter, an aunt, a granddaughter, a friend. I am an Occupational Therapist (OT). My role as an OT has been continuously intertwined with my mental illness since I started practicing. How can I help others when I don’t feel well myself? My negative thoughts continuously tell me I am not doing my job “good enough” and that I am letting others down at work.</p>
 <p>This year has been one of my most challenging, but I still have hope. I am thankful to have a doctor who is willing to try new things. Currently, I am in my third week of TMS treatment for depression. All of this is still new, but I think things have slightly begun to shift. I notice it’s easier to get up in the morning—some days, the work day seems more manageable, some days that voice that says I’m not good enough is a little quieter. My friends have also said I seem calmer.</p>
 <p>My story of recovery is not over, but hopefully with continued treatment things will continue to improve. I am writing this to say mental health is important, mental illnesses are real, and help is available.</p>
-            </div>
+            <div class="more-stories more-stories-click">
+                <button class="button-stories button-stories-click">
+                    Other Stories
+                </button>
+            </div>            
         </div>
     </div>
-    <div class="more-stories more-stories-click">
-        <button class="button-stories button-stories-click">
-            Other Stories
-        </button>
-    </div>
+</div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
             <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">appropriate help online</p></a>
