final before about content

--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -46,9 +46,9 @@
                 <h1 class="font-weight-800">Edwin Farrel Juniawan</h1>
                 <hr class="background-color-black" />
                 <br />
-                <h4 class="txt-software">Software Engineer</h4>
+                <h4 class="txt-software">Software Engineer - Full Stack Developer</h4>
                 <br />
-                <input class="btn btn-dark" type="button" value="My Projects" />
+                <input class="btn btn-dark" type="button" value="See My Projects" />
             </div>
             <div class="col-sm-12 col-lg-6 col-md-7">
                 <img class="w-100" style="height:100%;" src="images/people-computer.png" />
@@ -188,7 +188,7 @@
             <div class="col-md-2 col-sm-12 text-align-responsive text-right">
                 <i class="fas fa-chalkboard-teacher university-icon-modify"></i>
             </div>
-            <div class="col-md-4 col-sm-12 text-align-responsive font-family--montserrat">
+            <div class="col-md-4 col-sm-12 text-align-responsive font-family--montserrat margin-bottom-2em">
                 <h4><strong>Feb 2019 - Feb 2020</strong></h4>
                 <h5><strong>Binus University</strong></h5>
                 <h5>Laboratory Instructor (Fulltime)</h5>
@@ -662,8 +662,8 @@
         </div>
     </div>
 </body>
-
-</html>
 <script>
     AOS.init();
 </script>
+
+</html>
