add scroll behavior

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <br />
                 <h4 class="txt-software">Software Engineer - Full Stack Developer</h4>
                 <br />
-                <input class="btn btn-dark" type="button" value="See My Projects" />
+                <a href="#projects" class="btn btn-dark">See My Projects</a>
             </div>
             <div class="col-sm-12 col-lg-6 col-md-7">
                 <img class="w-100" style="height:100%;" src="images/people-computer.png" />
@@ -220,7 +220,7 @@
                     arrangement, PC installation and setup, and LCD Projector Setup.</h6>
             </div>
         </div>
-        <div class="row justify-content-center pb-5 padding-top-10em">
+        <div class="row justify-content-center pb-5 padding-top-10em" id="projects">
             <h1 class="title-education text-center font-family--poppins" data-aos="zoom-in-down"
                 data-aos-duration="1500">
                 My Projects
